--- a/.settings/org.eclipse.core.resources.prefs
+++ b/.settings/org.eclipse.core.resources.prefs
@@ -11,6 +11,7 @@ encoding//p_scrapy/jiayuan/jiayuan/pipelines.py=utf-8
 encoding//p_scrapy/jiayuan/jiayuan/python_get_redis.py=utf-8
 encoding//p_scrapy/jiayuan/jiayuan/settings.py=utf-8
 encoding//p_scrapy/jiayuan/jiayuan/spiders/jiayuan.py=utf-8
+encoding//p_scrapy/jiayuan/jiayuan/tools.py=utf-8
 encoding//p_scrapy/jiayuan_details/jiayuan_details/RandomProxy.py=utf-8
 encoding//p_scrapy/jiayuan_details/jiayuan_details/RandomUserAgent.py=utf-8
 encoding//p_scrapy/jiayuan_details/jiayuan_details/items.py=utf-8
@@ -33,7 +34,9 @@ encoding//p_scrapy/temp/spider_redis.py=utf-8
 encoding//p_scrapy/temp/unicode_to_str.py=utf-8
 encoding//p_scrapy/temp/\u6279\u91CF\u767B\u5F55.py=utf-8
 encoding//p_scrapy/temp/\u6EDA\u52A8.py=utf-8
+encoding//p_scrapy/test_spiders=UTF-8
 encoding//p_scrapy/test_spiders/test_spiders/RandomProxy.py=utf-8
+encoding//p_scrapy/test_spiders/test_spiders/RandomUserAgent.py=utf-8
 encoding//p_scrapy/test_spiders/test_spiders/get_proxy_ip.py=utf-8
 encoding//p_scrapy/test_spiders/test_spiders/items.py=utf-8
 encoding//p_scrapy/test_spiders/test_spiders/settings.py=utf-8
