--- a/.settings/org.eclipse.core.resources.prefs
+++ b/.settings/org.eclipse.core.resources.prefs
@@ -30,6 +30,7 @@ encoding//p_scrapy/temp/jiayuan_details_bak.py=utf-8
 encoding//p_scrapy/temp/jiayuan_scuess.py=utf-8
 encoding//p_scrapy/temp/python_get_redis.py=utf-8
 encoding//p_scrapy/temp/redis_test.py=utf-8
+encoding//p_scrapy/temp/retry_\u4FEE\u6539.py=utf-8
 encoding//p_scrapy/temp/spider_redis.py=utf-8
 encoding//p_scrapy/temp/unicode_to_str.py=utf-8
 encoding//p_scrapy/temp/\u6279\u91CF\u767B\u5F55.py=utf-8
@@ -37,10 +38,12 @@ encoding//p_scrapy/temp/\u6EDA\u52A8.py=utf-8
 encoding//p_scrapy/test_spiders=UTF-8
 encoding//p_scrapy/test_spiders/test_spiders/RandomProxy.py=utf-8
 encoding//p_scrapy/test_spiders/test_spiders/RandomUserAgent.py=utf-8
-encoding//p_scrapy/test_spiders/test_spiders/get_proxy_ip.py=utf-8
 encoding//p_scrapy/test_spiders/test_spiders/items.py=utf-8
+encoding//p_scrapy/test_spiders/test_spiders/middlewares.py=utf-8
+encoding//p_scrapy/test_spiders/test_spiders/retry_mid.py=utf-8
 encoding//p_scrapy/test_spiders/test_spiders/settings.py=utf-8
 encoding//p_scrapy/test_spiders/test_spiders/spiders/jiayuan.py=utf-8
+encoding//p_scrapy/test_spiders/test_spiders/tools.py=utf-8
 encoding//spider/BeautifulSoup.py=UTF-8
 encoding//spider/UrlLib.py=utf-8
 encoding//spider/meizitu.py=utf-8
