--- a/.settings/org.eclipse.core.resources.prefs
+++ b/.settings/org.eclipse.core.resources.prefs
@@ -3,6 +3,7 @@ encoding//logging/loggingclass.py=utf-8
 encoding//p_scrapy/details.py=utf-8
 encoding//p_scrapy/jiayuan.py=utf-8
 encoding//p_scrapy/jiayuan/jiayuan/RandomProxy.py=utf-8
+encoding//p_scrapy/jiayuan/jiayuan/RandomProxy_aa.py=utf-8
 encoding//p_scrapy/jiayuan/jiayuan/RandomUserAgent.py=utf-8
 encoding//p_scrapy/jiayuan/jiayuan/get_proxy_ip.py=utf-8
 encoding//p_scrapy/jiayuan/jiayuan/items.py=utf-8
