--- a/.settings/org.eclipse.core.resources.prefs
+++ b/.settings/org.eclipse.core.resources.prefs
@@ -2,6 +2,8 @@ eclipse.preferences.version=1
 encoding//logging/loggingclass.py=utf-8
 encoding//p_scrapy/details.py=utf-8
 encoding//p_scrapy/jiayuan.py=utf-8
+encoding//p_scrapy/jiayuan/jiayuan/RandomProxy.py=utf-8
+encoding//p_scrapy/jiayuan/jiayuan/RandomUserAgent.py=utf-8
 encoding//p_scrapy/jiayuan/jiayuan/get_proxy_ip.py=utf-8
 encoding//p_scrapy/jiayuan/jiayuan/items.py=utf-8
 encoding//p_scrapy/jiayuan/jiayuan/jiayuan.py=utf-8
