--- a/.settings/org.eclipse.core.resources.prefs
+++ b/.settings/org.eclipse.core.resources.prefs
@@ -60,6 +60,7 @@ encoding//spider/temp1.py=UTF-8
 encoding//spider/temp2.py=UTF-8
 encoding//spider/temp3.py=UTF-8
 encoding//temp/temp2.py=UTF-8
+encoding//\u4E00\u4E9B\u5C0F\u4F8B\u5B50/zwfw_hubei.py=utf-8
 encoding/connect_Mysql.py=utf-8
 encoding/connect_db2.py=UTF-8
 encoding/cookies.py=UTF-8
